--- a/embedcontent.html
+++ b/embedcontent.html
@@ -45,7 +45,13 @@
     .pfp-hint { font-size: 11px; color: #888; margin-bottom: 15px; font-family: sans-serif; }
     
     .canvas-area { background: #000; line-height: 0; border: 1px solid #333; position: relative; }
-    canvas { max-width: 100%; height: auto; cursor: grab; background-color: #000; }
+    canvas { 
+        max-width: 100%; 
+        height: auto; 
+        cursor: grab; 
+        background-color: #000; 
+        touch-action: none; /* Prevents mobile scrolling while dragging */
+    }
     canvas:active { cursor: grabbing; }
 </style>
 
@@ -84,17 +90,14 @@
     const resetBtn = document.getElementById("reset");
 
     const hatOverlay = new Image();
-    // Required to allow the canvas to download an image from a different domain (GitHub)
     hatOverlay.crossOrigin = "anonymous"; 
-    // Direct raw link to your bow
     hatOverlay.src = "https://raw.githubusercontent.com/KimmiJimmi/justagirl/main/bow.PNG"; 
 
     let userImage = null;
-    let hatScale = 0.2, hatRotation = 0, hatX = 256, hatY = 200;
+    let hatScale = 0.5, hatRotation = 0, hatX = 256, hatY = 200;
     let isDragging = false, lastX = 0, lastY = 0;
 
     function draw() {
-        // Ensure background is black
         ctx.fillStyle = "#000000";
         ctx.fillRect(0, 0, canvas.width, canvas.height);
 
@@ -140,39 +143,46 @@
         draw(); 
     };
 
-    const startDrag = (x, y) => { isDragging = true; lastX = x; lastY = y; };
-    const moveDrag = (x, y) => { 
-        if (isDragging) { 
-            hatX += x - lastX; 
-            hatY += y - lastY; 
-            lastX = x; 
-            lastY = y; 
-            draw(); 
-        }
+    // Corrected coordinate logic for mobile/desktop
+    const getCoords = (e) => {
+        const rect = canvas.getBoundingClientRect();
+        const clientX = e.touches ? e.touches[0].clientX : e.clientX;
+        const clientY = e.touches ? e.touches[0].clientY : e.clientY;
+        
+        // Scale factor: internal canvas size / CSS display size
+        return {
+            x: (clientX - rect.left) * (canvas.width / rect.width),
+            y: (clientY - rect.top) * (canvas.height / rect.height)
+        };
     };
 
-    // Interaction Listeners
-    canvas.onmousedown = (e) => startDrag(e.offsetX, e.offsetY);
-    window.onmousemove = (e) => { 
-        if(isDragging) { 
-            const rect = canvas.getBoundingClientRect();
-            moveDrag(e.clientX - rect.left, e.clientY - rect.top);
-        }
+    const startDrag = (e) => {
+        isDragging = true;
+        const coords = getCoords(e);
+        lastX = coords.x;
+        lastY = coords.y;
     };
-    window.onmouseup = () => isDragging = false;
 
-    canvas.ontouchstart = (e) => {
-        const rect = canvas.getBoundingClientRect();
-        const t = e.touches[0];
-        startDrag(t.clientX - rect.left, t.clientY - rect.top);
-        e.preventDefault();
+    const moveDrag = (e) => { 
+        if (!isDragging) return;
+        const coords = getCoords(e);
+        hatX += coords.x - lastX; 
+        hatY += coords.y - lastY; 
+        lastX = coords.x; 
+        lastY = coords.y; 
+        draw(); 
     };
-    canvas.ontouchmove = (e) => {
-        const rect = canvas.getBoundingClientRect();
-        const t = e.touches[0];
-        moveDrag(t.clientX - rect.left, t.clientY - rect.top);
-        e.preventDefault();
-    };
+
+    const stopDrag = () => { isDragging = false; };
+
+    // Unified Event Listeners
+    canvas.addEventListener('mousedown', startDrag);
+    window.addEventListener('mousemove', moveDrag);
+    window.addEventListener('mouseup', stopDrag);
+
+    canvas.addEventListener('touchstart', (e) => { startDrag(e); e.preventDefault(); }, {passive: false});
+    window.addEventListener('touchmove', (e) => { moveDrag(e); }, {passive: false});
+    window.addEventListener('touchend', stopDrag);
 
     downloadBtn.onclick = () => {
         if (!userImage) return alert("Please upload an image first.");
